--- a/public/index.html
+++ b/public/index.html
@@ -124,16 +124,85 @@
         .catch(e=>{ console.log(e); });
 
   /* Mustache binding */
+  function JsonToHtml(src,dest = null){
+      var jsonHtml = "<span>{</span><br/>";
+      if(!dest){
+        if(src && typeof src == 'object'){
+          for(var key in src){
+            jsonHtml += "&nbsp;&nbsp;&nbsp;&nbsp;";
+            if(src[key] !== null)
+              jsonHtml += "<span>" + "\"" + key + "\"" + ": " + src[key] + "</span><br/>";
+            else
+              jsonHtml += "<span>" + "\"" + key + "\"" + ": \" \"</span><br/>";
+          }
+        }
+      }
+      else{
+        if(src && dest && typeof src == 'object' && typeof dest == 'object'){
+          for(var key in dest){
+            jsonHtml += "&nbsp;&nbsp;&nbsp;&nbsp;";
+            if(dest[key] != null){
+              if(dest[key] == src[key])
+                jsonHtml += "<span>" + "\"" + key + "\"" + ": " + dest[key] + "</span><br/>";
+              else
+                jsonHtml += "<span style='background-color:pink;'>" + "\"" + key + "\"" + ": " + dest[key] + "</span><br/>";
+            }
+            else
+              jsonHtml += "<span>" + "\"" + key + "\"" + ": \" \"</span><br/>";
+          }
+        }
+      }
+      jsonHtml += "<span>}</span>";
+      return jsonHtml;
+  }
   function renderResults(jsonModel) {
-    console.log(jsonModel);
+    var diffObject = JSON.parse(JSON.stringify(jsonModel));
+    var currentKeys = Object.keys(jsonModel[0]).filter(key => key != "DiffModel");
+    //First table that only compare if equal
     var template = document.getElementById('template').innerHTML;
     var viewmodel = { 
-      "headers":Object.keys(jsonModel[0]),
+      "headers":currentKeys,
       "rows" : jsonModel,
       "lastruntime": new Date()
     };
     var rendered = Mustache.render(template, viewmodel);
     document.getElementById('target').innerHTML = rendered;
+    //Second table  row differences
+    var notEqualRows = []; 
+    diffObject.forEach(object => {
+      if(!object.AreEqual && object.DiffModel.diffs){
+          object.DiffModel.diffs.forEach(row => {
+            notEqualRows.push({
+              Comp : object.Comp,
+              Source : JsonToHtml(row.src),
+              Destination: JsonToHtml(row.src,row.dest)
+            });
+          }); 
+          object.DiffModel.existisInDestButNotInSrc.forEach(row => {
+            notEqualRows.push({
+              Comp : object.Comp,
+              Source : "<div style='text-align:center; width: 100%;'><span style='background-color:pink;'>Not in source</span></div>" ,
+              Destination: JsonToHtml(row)
+            });
+          });
+          object.DiffModel.existisInSrcButNotInDest.forEach(row => {
+            notEqualRows.push({
+              Comp : object.Comp,
+              Source : JsonToHtml(row),
+              Destination: "<div style='text-align:center; width: 100%;'><span style='background-color:pink;'>Not in destination</span></div>" 
+            });
+          });
+      }
+    });
+    currentKeys = Object.keys(notEqualRows[0]).filter(key => key != "Order");
+    viewmodel = { 
+      "headers":currentKeys,
+      "rows" : notEqualRows,
+      "lastruntime": new Date()
+    };
+    template = document.getElementById('diffTemplate').innerHTML;
+    rendered = Mustache.render(template, viewmodel);
+    document.getElementById('target').innerHTML += "<br/><h3>Databases Differences</h3><br/>" + rendered;
   }
 </script>
   </body>
